## projects/full/Makefile.am
## This file is (ultimately) included by the top level Makefile.am, so all
## files need to be specified relative to the top level directory.

projects_fulldir = $(prefix)/projects/full

dist_projects_full_DATA = projects/full/project_info \
	projects/full/project_parms
