## platform/hp_cc/include/Makefile.am
## This file is (ultimately) included by the top level Makefile.am, so all
## files need to be specified relative to the top level directory.

platform_hp_cc_includedir = $(prefix)/platform/hp_cc/include

dist_platform_hp_cc_include_DATA = \
	platform/hp_cc/include/jconfig.h platform/hp_cc/include/jmorecfg.h \
	platform/hp_cc/include/jpeglib.h
