## platform/ia64lin_gcc/include/Makefile.am
## This file is (ultimately) included by the top level Makefile.am, so all
## files need to be specified relative to the top level directory.

platform_ia64lin_gcc_includedir = $(prefix)/platform/ia64lin_gcc/include

dist_platform_ia64lin_gcc_include_DATA = 

