## platform/x86lin_gcc/include/Makefile.am
## This file is (ultimately) included by the top level Makefile.am, so all
## files need to be specified relative to the top level directory.

include $(srcdir)/platform/x86lin_gcc/include/bits/Makefile.am
include $(srcdir)/platform/x86lin_gcc/include/_newgcc/Makefile.am

platform_x86lin_gcc_includedir = $(prefix)/platform/x86lin_gcc/include

dist_platform_x86lin_gcc_include_DATA = 
